# tp-taller-de-programacion-I

./: README.md
tp-grupal/: Cargo.toml
tp-grupal/btc_node/: Cargo.toml
tp-grupal/btc_node/config/: node_client.conf  node_server.conf
tp-grupal/btc_node/src/: api.rs  bitcoin_node.rs  block_header.rs  blockchain.rs  config.rs  constants.rs  lib.rs  log_file.rs  merkle_tree.rs  message.rs  message_handlers.rs  message_header.rs  protocol_error.rs  raw_transaction.rs  register.rs  script.rs  utils.rs  wallet_handlers.rs
tp-grupal/btc_node/src/blockchain/: block.rs  txs.rs  utxo_set.rs
tp-grupal/btc_node/src/message/: addr.rs  block.rs  compact_size.rs  fee_filter.rs  get_data.rs  get_headers.rs  headers.rs  inv.rs  inventory.rs  ping.rs  pong.rs  sendcompact.rs  tx.rs  version.rs
tp-grupal/interface/: Cargo.toml
tp-grupal/interface/src/: account.rs  interface.glade~  main.rs
