[package]
name = "btc_node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin_hashes = "0.12.0"
bs58 = "0.5.0"
chrono = "0.4.24"
rand = "0.8.5"
secp256k1 = "0.27.0"

gtk = {version = "0.17.1"}
glib = "0.17.10"

# gio = { version = "0.17.10", features = ["v2_56"]}
#gtk = { git = "https://github.com/gtk-rs/gtk3-rs.git" }
