[package]
name = "interface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btc_node = { path = "../btc_node" }
gtk = {version = "0.17.1"}
glib = "0.17.10"
gio = { version = "0.9", features = ["v2_56"]}
#gtk = { git = "https://github.com/gtk-rs/gtk3-rs.git" }
